--- a/src/main/resources/templates/route.html
+++ b/src/main/resources/templates/route.html
@@ -13,9 +13,9 @@
           method="POST">
         <div class="text-center">
             <p>Add a new route!</p>
-            <p>Voie Name: <input type="text" name="name"/></p>
-            <p>Voie Hauteur: <input type="text" name="hauteur"/></p>
-            <p>Voie Nombre: <input type="text" name="nombre"/></p>
+            <p>Route Name: <input type="text" name="name"/></p>
+            <p>Route Height: <input type="text" name="height"/></p>
+            <p>Number of Routes: <input type="text" name="number"/></p>
             <p><input type="submit" value="Save"/></p>
 
         </div>
