--- a/src/main/resources/templates/topo.html
+++ b/src/main/resources/templates/topo.html
@@ -10,7 +10,7 @@
 <h2>New Topo</h2>
 
 <section>
-    <form action="#" th:object="${area}" method="post"> <!--th:action="@{'/spot/{id}/add/topo' (id=${spot.id})} " th:object="${Topo}"-->
+    <form action="#" th:object="${area}" method="post">
 
         <div class="text-center">
             <p>Add a new Topo!</p>
@@ -23,7 +23,6 @@
 
         </div>
     </form>
-    <div class="text-center">Already have an account? <a href="@{/login}">Log In</a></div>
 </section>
 </body>
 </html>
