--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,106 +1,98 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
-        <link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}"/>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}"/>
 
-    </head>
-    <body>
+</head>
+<body>
 
-        <header id="header" th:fragment="header">
-            <div id="titleSite">
-                <h1>
-                    Climbing Friends' Community!
-                </h1>
-                <!-- <p>Welcome, get started quickly by signing up.</p>-->
-            </div>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
-                        aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+<header id="header" th:fragment="header">
+    <div id="titleSite">
+        <h1>
+            Climbing Friends' Community!
+        </h1>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <div class="collapse navbar-collapse" id="navbarColor01">
-                    <ul class="navbar-nav mr-auto" id="leftMenu">
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/}">Home</a>
-                        </li>
-                        <li th:if="${currentUserId == null}" class="nav-item">
-                            <a class="nav-link" th:href="@{/signup}">Sign Up</a>
-                        </li>
-                        <li th:if="${currentUserId == null}" class="nav-item">
-                            <a class="nav-link" th:href="@{/login}">Log In</a>
-                        </li>
-                        <li th:if="${currentUserId != null}" class="nav-item">
-                            <a th:text="${userPseudo}" class="nav-link" th:href="@{/userAccount/{id} (id=${currentUserId})}">UserPseudo</a>
-                        </li>
-                        <li th:if="${currentUserId != null}" class="nav-item">
-                            <a class="nav-link" th:href="@{/logout}">Logout</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav mr-auto" id="rightMenu">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuTopoLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Topos
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDrowpdownMenuTopoLink">
-                                <a class="dropdown-item" th:href="@{/topoList}"> Topo List</a>
-                                <a class="dropdown-item" th:href="@{/topo}">Add a Topo</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuSpotLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Spots
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuSpotLink">
-                                <a class="dropdown-item" th:href="@{/spot/spotList}">Spot List</a>
-                                <a class="dropdown-item" th:href="@{/newspot}">Add a spot</a>
-                                <!--<div class="dropdown-divider"></div>
-                                <a class="dropdown-item" th:href="@{/spot/spotList}">Spot List</a>-->
-                            </div>
-                        </li>
-                       <!-- <li class="nav-item">
-                            <a class="nav-link" th:href="@{/spot/spotList}">Spot List</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/newspot}">Add a Spot</a>
-                        </li>-->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuAreaLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Areas
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuAreaLink">
-                                <a class="dropdown-item" th:href="@{/areaList}">Area List</a>
-                                <a class="dropdown-item" th:href="@{/area}">Add an Area</a>
-                            </div>
-                        </li>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto" id="leftMenu">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/}">Home</a>
+                </li>
+                <li th:if="${currentUserId == null}" class="nav-item">
+                    <a class="nav-link" th:href="@{/signup}">Sign Up</a>
+                </li>
+                <li th:if="${currentUserId == null}" class="nav-item">
+                    <a class="nav-link" th:href="@{/login}">Log In</a>
+                </li>
+                <li th:if="${currentUserId != null}" class="nav-item">
+                    <a th:text="${userPseudo}" class="nav-link" th:href="@{/userAccount/{id} (id=${currentUserId})}">UserPseudo</a>
+                </li>
+                <li th:if="${currentUserId != null}" class="nav-item">
+                    <a class="nav-link" th:href="@{/logout}">Logout</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav mr-auto" id="rightMenu">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuTopoLink" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Topos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDrowpdownMenuTopoLink">
+                        <a class="dropdown-item" th:href="@{/topoList}"> Topo List</a>
+                        <a class="dropdown-item" th:href="@{/topo}">Add a Topo</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuSpotLink" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Spots
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuSpotLink">
+                        <a class="dropdown-item" th:href="@{/spot/spotList}">Spot List</a>
+                        <a class="dropdown-item" th:href="@{/newspot}">Add a spot</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuAreaLink" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Areas
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuAreaLink">
+                        <a class="dropdown-item" th:href="@{/areaList}">Area List</a>
+                        <a class="dropdown-item" th:href="@{/area}">Add an Area</a>
+                    </div>
+                </li>
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuRouteLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Routes
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuRouteLink">
-                                <a class="dropdown-item" th:href="@{/routeList}">Route List</a>
-                                <a class="dropdown-item" th:href="@{/route}">Add a Route</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuPitchLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Pitches
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuPitchLink">
-                                <a class="dropdown-item" th:href="@{/pitchList}">Pitch List</a>
-                                <a class="dropdown-item" th:href="@{/pitch}">Add a Pitch</a>
-                            </div>
-                        </li>
-                    </ul>
-                   <!-- <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                    </form>-->
-                </div>
-            </nav>
-        </header>
-    </body>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuRouteLink" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Routes
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuRouteLink">
+                        <a class="dropdown-item" th:href="@{/routeList}">Route List</a>
+                        <a class="dropdown-item" th:href="@{/route}">Add a Route</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuPitchLink" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Pitches
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuPitchLink">
+                        <a class="dropdown-item" th:href="@{/pitchList}">Pitch List</a>
+                        <a class="dropdown-item" th:href="@{/pitch}">Add a Pitch</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
+</body>
 </html>
