--- a/src/main/resources/templates/routeList.html
+++ b/src/main/resources/templates/routeList.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
+      th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
 <div th:replace="fragments/base :: head"></div>
 <title>Route List</title>
 
@@ -32,8 +32,8 @@ th:replace="fragments/base :: base(~{::title},~{::h2},~{::section})">
             <th>Area</th>
         </tr>
         <tr>
-            <td th:text="${route.hauteur}">Height</td>
-            <td th:text="${route.nombre}">Number</td>
+            <td th:text="${route.height}">Height</td>
+            <td th:text="${route.number}">Number</td>
             <td>
                 <a th:href="@{/areaDetails/{id} (id=${route.area.id})}" th:text="${route.area.name}">Area</a>
             </td>
