--- a/src/main/resources/templates/signup-form.html
+++ b/src/main/resources/templates/signup-form.html
@@ -27,7 +27,9 @@
             <p><input type="submit" value="Submit"/></p>
         </div>
     </form>
-    <div class="text-center">Already have an account? <a href="#">Log In</a></div>
+    <div class="text-center">
+        Already have an account?
+        <a href="@{/login}">Log In</a>
     </div>
 </section>
 </body>
