--- a/src/main/resources/templates/userAccount.html
+++ b/src/main/resources/templates/userAccount.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" data-toggle="tab" href="#myTopos">My topos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" data-toggle="tab" href="#myRsv">My reservations</a>
+                        <a class="nav-link" data-toggle="tab" href="#myRsv">My bookings</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" data-toggle="tab" href="#myAreas">My areas</a>
@@ -77,19 +77,19 @@
                                 <td th:text="${topo.publicationDate}">Publication Date</td>
                             </tr>
                             <tr>
-                                <th colspan="3">Demande de Reservation</th>
+                                <th colspan="3">Booking request</th>
                             </tr>
-                            <tr th:if="${topo.reservation == null}">
+                            <tr th:if="${topo.booking == null}">
                                 <td colspan="3">Aucune demande en cours</td>
                             </tr>
-                            <tr th:each="rsv: ${topo.reservation}">
-                                <td th:text="${rsv.user.name} + ' ' + ${rsv.dateReservation}">User Name</td>
-                                <td th:if="${rsv.reservationStatus == null}">
-                                    <p>Demande en attente</p>
+                            <tr th:each="rsv: ${topo.booking}">
+                                <td th:text="${rsv.user.name} + ' ' + ${rsv.bookingDate}">User Name</td>
+                                <td th:if="${rsv.bookingStatus == null}">
+                                    <p>Pending request</p>
                                 </td>
-                                <td th:if="${rsv.reservationStatus == null and topo.isReserved() == false}">
+                                <td th:if="${rsv.bookingStatus == null and topo.isBooked() == false}">
                                     <form action="#"
-                                          th:action="@{/reservationRequestValidation/{id}/{reservationStatus} (id=${rsv.id}, reservationStatus=true)}"
+                                          th:action="@{/bookingRequestValidation/{id}/{bookingStatus} (id=${rsv.id}, bookingStatus=true)}"
                                           th:object="${rsv}"
                                           method="POST"
                                     >
@@ -97,30 +97,30 @@
                                     </form>
                                     <br>
                                     <form action="#"
-                                          th:action="@{/reservationRequestValidation/{id}/{reservationStatus} (id=${rsv.id}, reservationStatus=false)}"
+                                          th:action="@{/bookingRequestValidation/{id}/{bookingStatus} (id=${rsv.id}, bookingStatus=false)}"
                                           th:object="${rsv}"
                                           method="POST"
                                     >
                                         <input type="submit" value="Refuser la demande de reservation">
                                     </form>
                                 </td>
-                                <td th:if="${rsv.reservationStatus == null and topo.isReserved() == true}">
+                                <td th:if="${rsv.bookingStatus == null and topo.isBooked() == true}">
                                     Veuillez rendre le topo disponible pour accepter ou refuser une demande en attente.
                                 </td>
 
-                                <td th:if="${rsv.reservationStatus == true}">
-                                    <p>Demande acceptée</p>
-                                    <p th:text="${rsv.user.email}">Coordonnées de contact</p>
+                                <td th:if="${rsv.bookingStatus == true}">
+                                    <p>Request accepted</p>
+                                    <p th:text="${rsv.user.email}">Contact information</p>
                                     <br>
                                     <form action="#"
-                                          th:action="@{/delete/reservation/{id} (id=${rsv.id})}"
+                                          th:action="@{/delete/booking/{id} (id=${rsv.id})}"
                                           th:object="${rsv}"
                                           method="get">
                                         <input type="submit" value="Rendre le topo disponible">
                                     </form>
                                 </td>
-                                <td th:if="${rsv.reservationStatus == false}">
-                                    <p>Demande refusée</p>
+                                <td th:if="${rsv.bookingStatus == false}">
+                                    <p>Request denied</p>
                                 </td>
                             </tr>
                         </table>
@@ -141,23 +141,23 @@
                                 <td th:text="${rsv.topo.title}">Title</td>
                                 <td th:text="${rsv.topo.author}">Author</td>
                                 <td th:text="${rsv.topo.publicationDate}">Publication Date</td>
-                                <td th:text="${rsv.topo.user.name}"> name's owner</td>
+                                <td th:text="${rsv.topo.user.name}"> Owner's name</td>
                             </tr>
                             <tr>
-                                <td colspan="4" th:if="${rsv.reservationStatus == null}">
-                                    <p>Demande en attente</p>
+                                <td colspan="4" th:if="${rsv.bookingStatus == null}">
+                                    <p>Pending request</p>
                                 </td>
-                                <td colspan="4" th:if="${rsv.reservationStatus == true}">
-                                    <p>Demande acceptée</p>
+                                <td colspan="4" th:if="${rsv.bookingStatus == true}">
+                                    <p>Request accepted</p>
                                 </td>
-                                <td colspan="4" th:if="${rsv.reservationStatus == false}">
-                                    <p>Demande refusée</p>
+                                <td colspan="4" th:if="${rsv.bookingStatus == false}">
+                                    <p>Request denied</p>
                                 </td>
                             </tr>
                             <tr>
-                                <td th:if="${rsv.reservationStatus != true}" colspan="4">
+                                <td th:if="${rsv.bookingStatus != true}" colspan="4">
                                     <form action="#"
-                                          th:action="@{/delete/reservation/{id} (id=${rsv.id})}"
+                                          th:action="@{/delete/booking/{id} (id=${rsv.id})}"
                                           th:object="${rsv}"
                                           method="get"
                                     >
